parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    QUESTION
    DOUBLE_POINT
    POINT
    PERCENTAJE
    AT
    EXCLAMATION
    DEFN
    NULL
    IF
    ELSE
    WHILE
    DO
    FOR
    FUNCTION_NTH

Grammar

Rule 0     S' -> stament
Rule 1     stament -> LPAREN compute RPAREN
Rule 2     compute -> function
Rule 3     compute -> general_expression
Rule 4     function -> FUNCTION_PRINTLN multipleObjects
Rule 5     function -> READLINE
Rule 6     function -> FUNCTION_EMPTY STRING
Rule 7     multiplestring -> STRING
Rule 8     multiplestring -> STRING multiplestring
Rule 9     multiplestring -> stament
Rule 10    multiplestring -> stament multiplestring
Rule 11    function -> TYPE_STR multiplestring
Rule 12    function -> FUNCTION_SUB STRING NUMBER
Rule 13    function -> FUNCTION_SUB ID NUMBER
Rule 14    function -> FUNCTION_SEQ STRING
Rule 15    function -> FUNCTION_SEQ ID
Rule 16    multipleObjects -> value
Rule 17    multipleObjects -> value multipleObjects
Rule 18    multipleObjects -> sequential_colls
Rule 19    multipleObjects -> sequential_colls multipleObjects
Rule 20    value -> STRING
Rule 21    value -> NUMBER
Rule 22    value -> FLOAT
Rule 23    value -> BOOLEAN_TRUE
Rule 24    value -> BOOLEAN_FALSE
Rule 25    vector -> LBRACKET multipleObjects RBRACKET
Rule 26    vector -> LPAREN VECTOR multipleObjects RPAREN
Rule 27    function -> FUNCTION_GET sequential_colls NUMBER
Rule 28    function -> FUNCTION_COUNT sequential_colls
Rule 29    function -> FUNCTION_CONJ sequential_colls multipleObjects
Rule 30    list -> APOSTROPHE LPAREN multipleObjects RPAREN
Rule 31    list -> LPAREN LIST multipleObjects RPAREN
Rule 32    sequential_colls -> vector
Rule 33    sequential_colls -> set
Rule 34    sequential_colls -> list
Rule 35    sequential_colls -> ID
Rule 36    set -> SETDEF LCURLYBRA multipleObjects RCURLYBRA
Rule 37    set -> LPAREN SET multipleObjects RPAREN
Rule 38    setFunctions_union -> SET DIVIDE UNION set set
Rule 39    setFunctions_difference -> SET DIVIDE DIFFERENCE set set
Rule 40    setFunctions_intersection -> SET DIVIDE INTERSECTION set set
Rule 41    function_take -> LPAREN TAKE NUMBER sequential_colls
Rule 42    function_drop -> LPAREN DROP NUMBER sequential_colls
Rule 43    general_expression -> math_operation
Rule 44    general_expression -> bool_operation
Rule 45    general_expression -> compare_operation
Rule 46    general_expression -> variable_expression
Rule 47    general_expression -> setFunctions_union
Rule 48    general_expression -> setFunctions_intersection
Rule 49    general_expression -> setFunctions_difference
Rule 50    general_expression -> function_take
Rule 51    general_expression -> function_drop
Rule 52    num_expression -> LPAREN math_operation RPAREN
Rule 53    math_operation -> PLUS num_expression NUMBER
Rule 54    math_operation -> MINUS num_expression NUMBER
Rule 55    math_operation -> DIVIDE num_expression NUMBER
Rule 56    math_operation -> TIMES num_expression NUMBER
Rule 57    num_expression -> NUMBER
Rule 58    bool_expression -> LPAREN bool_operation RPAREN
Rule 59    bool_operation -> AND bool_expression bool_expression
Rule 60    bool_operation -> OR bool_expression bool_expression
Rule 61    bool_operation -> NOT bool_expression
Rule 62    bool_expression -> BOOLEAN_TRUE
Rule 63    bool_expression -> BOOLEAN_FALSE
Rule 64    compare_operation -> GREATERTHAN num_expression num_expression
Rule 65    compare_operation -> LESSTHAN num_expression num_expression
Rule 66    compare_operation -> GREATERTHANEQUALS num_expression num_expression
Rule 67    compare_operation -> LESSTHANEQUALS num_expression num_expression
Rule 68    compare_operation -> EQUAL num_expression num_expression
Rule 69    compare_operation -> NOTEQUAL num_expression num_expression
Rule 70    variable_expression -> DEF ID multipleObjects

Terminals, with rules where they appear

AND                  : 59
APOSTROPHE           : 30
AT                   : 
BOOLEAN_FALSE        : 24 63
BOOLEAN_TRUE         : 23 62
DEF                  : 70
DEFN                 : 
DIFFERENCE           : 39
DIVIDE               : 38 39 40 55
DO                   : 
DOUBLE_POINT         : 
DROP                 : 42
ELSE                 : 
EQUAL                : 68
EXCLAMATION          : 
FLOAT                : 22
FOR                  : 
FUNCTION_CONJ        : 29
FUNCTION_COUNT       : 28
FUNCTION_EMPTY       : 6
FUNCTION_GET         : 27
FUNCTION_NTH         : 
FUNCTION_PRINTLN     : 4
FUNCTION_SEQ         : 14 15
FUNCTION_SUB         : 12 13
GREATERTHAN          : 64
GREATERTHANEQUALS    : 66
ID                   : 13 15 35 70
IF                   : 
INTERSECTION         : 40
LBRACKET             : 25
LCURLYBRA            : 36
LESSTHAN             : 65
LESSTHANEQUALS       : 67
LIST                 : 31
LPAREN               : 1 26 30 31 37 41 42 52 58
MINUS                : 54
NOT                  : 61
NOTEQUAL             : 69
NULL                 : 
NUMBER               : 12 13 21 27 41 42 53 54 55 56 57
OR                   : 60
PERCENTAJE           : 
PLUS                 : 53
POINT                : 
QUESTION             : 
RBRACKET             : 25
RCURLYBRA            : 36
READLINE             : 5
RPAREN               : 1 26 30 31 37 52 58
SET                  : 37 38 39 40
SETDEF               : 36
STRING               : 6 7 8 12 14 20
TAKE                 : 41
TIMES                : 56
TYPE_STR             : 11
UNION                : 38
VECTOR               : 26
WHILE                : 
error                : 

Nonterminals, with rules where they appear

bool_expression      : 59 59 60 60 61
bool_operation       : 44 58
compare_operation    : 45
compute              : 1
function             : 2
function_drop        : 51
function_take        : 50
general_expression   : 3
list                 : 34
math_operation       : 43 52
multipleObjects      : 4 17 19 25 26 29 30 31 36 37 70
multiplestring       : 8 10 11
num_expression       : 53 54 55 56 64 64 65 65 66 66 67 67 68 68 69 69
sequential_colls     : 18 19 27 28 29 41 42
set                  : 33 38 38 39 39 40 40
setFunctions_difference : 49
setFunctions_intersection : 48
setFunctions_union   : 47
stament              : 9 10 0
value                : 16 17
variable_expression  : 46
vector               : 32

Parsing method: LALR

state 0

    (0) S' -> . stament
    (1) stament -> . LPAREN compute RPAREN

    LPAREN          shift and go to state 2

    stament                        shift and go to state 1

state 1

    (0) S' -> stament .



state 2

    (1) stament -> LPAREN . compute RPAREN
    (2) compute -> . function
    (3) compute -> . general_expression
    (4) function -> . FUNCTION_PRINTLN multipleObjects
    (5) function -> . READLINE
    (6) function -> . FUNCTION_EMPTY STRING
    (11) function -> . TYPE_STR multiplestring
    (12) function -> . FUNCTION_SUB STRING NUMBER
    (13) function -> . FUNCTION_SUB ID NUMBER
    (14) function -> . FUNCTION_SEQ STRING
    (15) function -> . FUNCTION_SEQ ID
    (27) function -> . FUNCTION_GET sequential_colls NUMBER
    (28) function -> . FUNCTION_COUNT sequential_colls
    (29) function -> . FUNCTION_CONJ sequential_colls multipleObjects
    (43) general_expression -> . math_operation
    (44) general_expression -> . bool_operation
    (45) general_expression -> . compare_operation
    (46) general_expression -> . variable_expression
    (47) general_expression -> . setFunctions_union
    (48) general_expression -> . setFunctions_intersection
    (49) general_expression -> . setFunctions_difference
    (50) general_expression -> . function_take
    (51) general_expression -> . function_drop
    (53) math_operation -> . PLUS num_expression NUMBER
    (54) math_operation -> . MINUS num_expression NUMBER
    (55) math_operation -> . DIVIDE num_expression NUMBER
    (56) math_operation -> . TIMES num_expression NUMBER
    (59) bool_operation -> . AND bool_expression bool_expression
    (60) bool_operation -> . OR bool_expression bool_expression
    (61) bool_operation -> . NOT bool_expression
    (64) compare_operation -> . GREATERTHAN num_expression num_expression
    (65) compare_operation -> . LESSTHAN num_expression num_expression
    (66) compare_operation -> . GREATERTHANEQUALS num_expression num_expression
    (67) compare_operation -> . LESSTHANEQUALS num_expression num_expression
    (68) compare_operation -> . EQUAL num_expression num_expression
    (69) compare_operation -> . NOTEQUAL num_expression num_expression
    (70) variable_expression -> . DEF ID multipleObjects
    (38) setFunctions_union -> . SET DIVIDE UNION set set
    (40) setFunctions_intersection -> . SET DIVIDE INTERSECTION set set
    (39) setFunctions_difference -> . SET DIVIDE DIFFERENCE set set
    (41) function_take -> . LPAREN TAKE NUMBER sequential_colls
    (42) function_drop -> . LPAREN DROP NUMBER sequential_colls

    FUNCTION_PRINTLN shift and go to state 7
    READLINE        shift and go to state 8
    FUNCTION_EMPTY  shift and go to state 9
    TYPE_STR        shift and go to state 10
    FUNCTION_SUB    shift and go to state 11
    FUNCTION_SEQ    shift and go to state 12
    FUNCTION_GET    shift and go to state 13
    FUNCTION_COUNT  shift and go to state 14
    FUNCTION_CONJ   shift and go to state 15
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    DIVIDE          shift and go to state 27
    TIMES           shift and go to state 28
    AND             shift and go to state 29
    OR              shift and go to state 30
    NOT             shift and go to state 31
    GREATERTHAN     shift and go to state 32
    LESSTHAN        shift and go to state 33
    GREATERTHANEQUALS shift and go to state 34
    LESSTHANEQUALS  shift and go to state 35
    EQUAL           shift and go to state 36
    NOTEQUAL        shift and go to state 37
    DEF             shift and go to state 38
    SET             shift and go to state 39
    LPAREN          shift and go to state 3

    compute                        shift and go to state 4
    function                       shift and go to state 5
    general_expression             shift and go to state 6
    math_operation                 shift and go to state 16
    bool_operation                 shift and go to state 17
    compare_operation              shift and go to state 18
    variable_expression            shift and go to state 19
    setFunctions_union             shift and go to state 20
    setFunctions_intersection      shift and go to state 21
    setFunctions_difference        shift and go to state 22
    function_take                  shift and go to state 23
    function_drop                  shift and go to state 24

state 3

    (41) function_take -> LPAREN . TAKE NUMBER sequential_colls
    (42) function_drop -> LPAREN . DROP NUMBER sequential_colls

    TAKE            shift and go to state 40
    DROP            shift and go to state 41


state 4

    (1) stament -> LPAREN compute . RPAREN

    RPAREN          shift and go to state 42


state 5

    (2) compute -> function .

    RPAREN          reduce using rule 2 (compute -> function .)


state 6

    (3) compute -> general_expression .

    RPAREN          reduce using rule 3 (compute -> general_expression .)


state 7

    (4) function -> FUNCTION_PRINTLN . multipleObjects
    (16) multipleObjects -> . value
    (17) multipleObjects -> . value multipleObjects
    (18) multipleObjects -> . sequential_colls
    (19) multipleObjects -> . sequential_colls multipleObjects
    (20) value -> . STRING
    (21) value -> . NUMBER
    (22) value -> . FLOAT
    (23) value -> . BOOLEAN_TRUE
    (24) value -> . BOOLEAN_FALSE
    (32) sequential_colls -> . vector
    (33) sequential_colls -> . set
    (34) sequential_colls -> . list
    (35) sequential_colls -> . ID
    (25) vector -> . LBRACKET multipleObjects RBRACKET
    (26) vector -> . LPAREN VECTOR multipleObjects RPAREN
    (36) set -> . SETDEF LCURLYBRA multipleObjects RCURLYBRA
    (37) set -> . LPAREN SET multipleObjects RPAREN
    (30) list -> . APOSTROPHE LPAREN multipleObjects RPAREN
    (31) list -> . LPAREN LIST multipleObjects RPAREN

    STRING          shift and go to state 46
    NUMBER          shift and go to state 47
    FLOAT           shift and go to state 48
    BOOLEAN_TRUE    shift and go to state 49
    BOOLEAN_FALSE   shift and go to state 50
    ID              shift and go to state 54
    LBRACKET        shift and go to state 55
    LPAREN          shift and go to state 56
    SETDEF          shift and go to state 57
    APOSTROPHE      shift and go to state 58

    multipleObjects                shift and go to state 43
    value                          shift and go to state 44
    sequential_colls               shift and go to state 45
    vector                         shift and go to state 51
    set                            shift and go to state 52
    list                           shift and go to state 53

state 8

    (5) function -> READLINE .

    RPAREN          reduce using rule 5 (function -> READLINE .)


state 9

    (6) function -> FUNCTION_EMPTY . STRING

    STRING          shift and go to state 59


state 10

    (11) function -> TYPE_STR . multiplestring
    (7) multiplestring -> . STRING
    (8) multiplestring -> . STRING multiplestring
    (9) multiplestring -> . stament
    (10) multiplestring -> . stament multiplestring
    (1) stament -> . LPAREN compute RPAREN

    STRING          shift and go to state 61
    LPAREN          shift and go to state 2

    multiplestring                 shift and go to state 60
    stament                        shift and go to state 62

state 11

    (12) function -> FUNCTION_SUB . STRING NUMBER
    (13) function -> FUNCTION_SUB . ID NUMBER

    STRING          shift and go to state 63
    ID              shift and go to state 64


state 12

    (14) function -> FUNCTION_SEQ . STRING
    (15) function -> FUNCTION_SEQ . ID

    STRING          shift and go to state 65
    ID              shift and go to state 66


state 13

    (27) function -> FUNCTION_GET . sequential_colls NUMBER
    (32) sequential_colls -> . vector
    (33) sequential_colls -> . set
    (34) sequential_colls -> . list
    (35) sequential_colls -> . ID
    (25) vector -> . LBRACKET multipleObjects RBRACKET
    (26) vector -> . LPAREN VECTOR multipleObjects RPAREN
    (36) set -> . SETDEF LCURLYBRA multipleObjects RCURLYBRA
    (37) set -> . LPAREN SET multipleObjects RPAREN
    (30) list -> . APOSTROPHE LPAREN multipleObjects RPAREN
    (31) list -> . LPAREN LIST multipleObjects RPAREN

    ID              shift and go to state 54
    LBRACKET        shift and go to state 55
    LPAREN          shift and go to state 56
    SETDEF          shift and go to state 57
    APOSTROPHE      shift and go to state 58

    sequential_colls               shift and go to state 67
    vector                         shift and go to state 51
    set                            shift and go to state 52
    list                           shift and go to state 53

state 14

    (28) function -> FUNCTION_COUNT . sequential_colls
    (32) sequential_colls -> . vector
    (33) sequential_colls -> . set
    (34) sequential_colls -> . list
    (35) sequential_colls -> . ID
    (25) vector -> . LBRACKET multipleObjects RBRACKET
    (26) vector -> . LPAREN VECTOR multipleObjects RPAREN
    (36) set -> . SETDEF LCURLYBRA multipleObjects RCURLYBRA
    (37) set -> . LPAREN SET multipleObjects RPAREN
    (30) list -> . APOSTROPHE LPAREN multipleObjects RPAREN
    (31) list -> . LPAREN LIST multipleObjects RPAREN

    ID              shift and go to state 54
    LBRACKET        shift and go to state 55
    LPAREN          shift and go to state 56
    SETDEF          shift and go to state 57
    APOSTROPHE      shift and go to state 58

    sequential_colls               shift and go to state 68
    vector                         shift and go to state 51
    set                            shift and go to state 52
    list                           shift and go to state 53

state 15

    (29) function -> FUNCTION_CONJ . sequential_colls multipleObjects
    (32) sequential_colls -> . vector
    (33) sequential_colls -> . set
    (34) sequential_colls -> . list
    (35) sequential_colls -> . ID
    (25) vector -> . LBRACKET multipleObjects RBRACKET
    (26) vector -> . LPAREN VECTOR multipleObjects RPAREN
    (36) set -> . SETDEF LCURLYBRA multipleObjects RCURLYBRA
    (37) set -> . LPAREN SET multipleObjects RPAREN
    (30) list -> . APOSTROPHE LPAREN multipleObjects RPAREN
    (31) list -> . LPAREN LIST multipleObjects RPAREN

    ID              shift and go to state 54
    LBRACKET        shift and go to state 55
    LPAREN          shift and go to state 56
    SETDEF          shift and go to state 57
    APOSTROPHE      shift and go to state 58

    sequential_colls               shift and go to state 69
    vector                         shift and go to state 51
    set                            shift and go to state 52
    list                           shift and go to state 53

state 16

    (43) general_expression -> math_operation .

    RPAREN          reduce using rule 43 (general_expression -> math_operation .)


state 17

    (44) general_expression -> bool_operation .

    RPAREN          reduce using rule 44 (general_expression -> bool_operation .)


state 18

    (45) general_expression -> compare_operation .

    RPAREN          reduce using rule 45 (general_expression -> compare_operation .)


state 19

    (46) general_expression -> variable_expression .

    RPAREN          reduce using rule 46 (general_expression -> variable_expression .)


state 20

    (47) general_expression -> setFunctions_union .

    RPAREN          reduce using rule 47 (general_expression -> setFunctions_union .)


state 21

    (48) general_expression -> setFunctions_intersection .

    RPAREN          reduce using rule 48 (general_expression -> setFunctions_intersection .)


state 22

    (49) general_expression -> setFunctions_difference .

    RPAREN          reduce using rule 49 (general_expression -> setFunctions_difference .)


state 23

    (50) general_expression -> function_take .

    RPAREN          reduce using rule 50 (general_expression -> function_take .)


state 24

    (51) general_expression -> function_drop .

    RPAREN          reduce using rule 51 (general_expression -> function_drop .)


state 25

    (53) math_operation -> PLUS . num_expression NUMBER
    (52) num_expression -> . LPAREN math_operation RPAREN
    (57) num_expression -> . NUMBER

    LPAREN          shift and go to state 72
    NUMBER          shift and go to state 71

    num_expression                 shift and go to state 70

state 26

    (54) math_operation -> MINUS . num_expression NUMBER
    (52) num_expression -> . LPAREN math_operation RPAREN
    (57) num_expression -> . NUMBER

    LPAREN          shift and go to state 72
    NUMBER          shift and go to state 71

    num_expression                 shift and go to state 73

state 27

    (55) math_operation -> DIVIDE . num_expression NUMBER
    (52) num_expression -> . LPAREN math_operation RPAREN
    (57) num_expression -> . NUMBER

    LPAREN          shift and go to state 72
    NUMBER          shift and go to state 71

    num_expression                 shift and go to state 74

state 28

    (56) math_operation -> TIMES . num_expression NUMBER
    (52) num_expression -> . LPAREN math_operation RPAREN
    (57) num_expression -> . NUMBER

    LPAREN          shift and go to state 72
    NUMBER          shift and go to state 71

    num_expression                 shift and go to state 75

state 29

    (59) bool_operation -> AND . bool_expression bool_expression
    (58) bool_expression -> . LPAREN bool_operation RPAREN
    (62) bool_expression -> . BOOLEAN_TRUE
    (63) bool_expression -> . BOOLEAN_FALSE

    LPAREN          shift and go to state 77
    BOOLEAN_TRUE    shift and go to state 78
    BOOLEAN_FALSE   shift and go to state 79

    bool_expression                shift and go to state 76

state 30

    (60) bool_operation -> OR . bool_expression bool_expression
    (58) bool_expression -> . LPAREN bool_operation RPAREN
    (62) bool_expression -> . BOOLEAN_TRUE
    (63) bool_expression -> . BOOLEAN_FALSE

    LPAREN          shift and go to state 77
    BOOLEAN_TRUE    shift and go to state 78
    BOOLEAN_FALSE   shift and go to state 79

    bool_expression                shift and go to state 80

state 31

    (61) bool_operation -> NOT . bool_expression
    (58) bool_expression -> . LPAREN bool_operation RPAREN
    (62) bool_expression -> . BOOLEAN_TRUE
    (63) bool_expression -> . BOOLEAN_FALSE

    LPAREN          shift and go to state 77
    BOOLEAN_TRUE    shift and go to state 78
    BOOLEAN_FALSE   shift and go to state 79

    bool_expression                shift and go to state 81

state 32

    (64) compare_operation -> GREATERTHAN . num_expression num_expression
    (52) num_expression -> . LPAREN math_operation RPAREN
    (57) num_expression -> . NUMBER

    LPAREN          shift and go to state 72
    NUMBER          shift and go to state 71

    num_expression                 shift and go to state 82

state 33

    (65) compare_operation -> LESSTHAN . num_expression num_expression
    (52) num_expression -> . LPAREN math_operation RPAREN
    (57) num_expression -> . NUMBER

    LPAREN          shift and go to state 72
    NUMBER          shift and go to state 71

    num_expression                 shift and go to state 83

state 34

    (66) compare_operation -> GREATERTHANEQUALS . num_expression num_expression
    (52) num_expression -> . LPAREN math_operation RPAREN
    (57) num_expression -> . NUMBER

    LPAREN          shift and go to state 72
    NUMBER          shift and go to state 71

    num_expression                 shift and go to state 84

state 35

    (67) compare_operation -> LESSTHANEQUALS . num_expression num_expression
    (52) num_expression -> . LPAREN math_operation RPAREN
    (57) num_expression -> . NUMBER

    LPAREN          shift and go to state 72
    NUMBER          shift and go to state 71

    num_expression                 shift and go to state 85

state 36

    (68) compare_operation -> EQUAL . num_expression num_expression
    (52) num_expression -> . LPAREN math_operation RPAREN
    (57) num_expression -> . NUMBER

    LPAREN          shift and go to state 72
    NUMBER          shift and go to state 71

    num_expression                 shift and go to state 86

state 37

    (69) compare_operation -> NOTEQUAL . num_expression num_expression
    (52) num_expression -> . LPAREN math_operation RPAREN
    (57) num_expression -> . NUMBER

    LPAREN          shift and go to state 72
    NUMBER          shift and go to state 71

    num_expression                 shift and go to state 87

state 38

    (70) variable_expression -> DEF . ID multipleObjects

    ID              shift and go to state 88


state 39

    (38) setFunctions_union -> SET . DIVIDE UNION set set
    (40) setFunctions_intersection -> SET . DIVIDE INTERSECTION set set
    (39) setFunctions_difference -> SET . DIVIDE DIFFERENCE set set

    DIVIDE          shift and go to state 89


state 40

    (41) function_take -> LPAREN TAKE . NUMBER sequential_colls

    NUMBER          shift and go to state 90


state 41

    (42) function_drop -> LPAREN DROP . NUMBER sequential_colls

    NUMBER          shift and go to state 91


state 42

    (1) stament -> LPAREN compute RPAREN .

    $end            reduce using rule 1 (stament -> LPAREN compute RPAREN .)
    STRING          reduce using rule 1 (stament -> LPAREN compute RPAREN .)
    LPAREN          reduce using rule 1 (stament -> LPAREN compute RPAREN .)
    RPAREN          reduce using rule 1 (stament -> LPAREN compute RPAREN .)


state 43

    (4) function -> FUNCTION_PRINTLN multipleObjects .

    RPAREN          reduce using rule 4 (function -> FUNCTION_PRINTLN multipleObjects .)


state 44

    (16) multipleObjects -> value .
    (17) multipleObjects -> value . multipleObjects
    (16) multipleObjects -> . value
    (17) multipleObjects -> . value multipleObjects
    (18) multipleObjects -> . sequential_colls
    (19) multipleObjects -> . sequential_colls multipleObjects
    (20) value -> . STRING
    (21) value -> . NUMBER
    (22) value -> . FLOAT
    (23) value -> . BOOLEAN_TRUE
    (24) value -> . BOOLEAN_FALSE
    (32) sequential_colls -> . vector
    (33) sequential_colls -> . set
    (34) sequential_colls -> . list
    (35) sequential_colls -> . ID
    (25) vector -> . LBRACKET multipleObjects RBRACKET
    (26) vector -> . LPAREN VECTOR multipleObjects RPAREN
    (36) set -> . SETDEF LCURLYBRA multipleObjects RCURLYBRA
    (37) set -> . LPAREN SET multipleObjects RPAREN
    (30) list -> . APOSTROPHE LPAREN multipleObjects RPAREN
    (31) list -> . LPAREN LIST multipleObjects RPAREN

    RPAREN          reduce using rule 16 (multipleObjects -> value .)
    RBRACKET        reduce using rule 16 (multipleObjects -> value .)
    RCURLYBRA       reduce using rule 16 (multipleObjects -> value .)
    STRING          shift and go to state 46
    NUMBER          shift and go to state 47
    FLOAT           shift and go to state 48
    BOOLEAN_TRUE    shift and go to state 49
    BOOLEAN_FALSE   shift and go to state 50
    ID              shift and go to state 54
    LBRACKET        shift and go to state 55
    LPAREN          shift and go to state 56
    SETDEF          shift and go to state 57
    APOSTROPHE      shift and go to state 58

    value                          shift and go to state 44
    multipleObjects                shift and go to state 92
    sequential_colls               shift and go to state 45
    vector                         shift and go to state 51
    set                            shift and go to state 52
    list                           shift and go to state 53

state 45

    (18) multipleObjects -> sequential_colls .
    (19) multipleObjects -> sequential_colls . multipleObjects
    (16) multipleObjects -> . value
    (17) multipleObjects -> . value multipleObjects
    (18) multipleObjects -> . sequential_colls
    (19) multipleObjects -> . sequential_colls multipleObjects
    (20) value -> . STRING
    (21) value -> . NUMBER
    (22) value -> . FLOAT
    (23) value -> . BOOLEAN_TRUE
    (24) value -> . BOOLEAN_FALSE
    (32) sequential_colls -> . vector
    (33) sequential_colls -> . set
    (34) sequential_colls -> . list
    (35) sequential_colls -> . ID
    (25) vector -> . LBRACKET multipleObjects RBRACKET
    (26) vector -> . LPAREN VECTOR multipleObjects RPAREN
    (36) set -> . SETDEF LCURLYBRA multipleObjects RCURLYBRA
    (37) set -> . LPAREN SET multipleObjects RPAREN
    (30) list -> . APOSTROPHE LPAREN multipleObjects RPAREN
    (31) list -> . LPAREN LIST multipleObjects RPAREN

    RPAREN          reduce using rule 18 (multipleObjects -> sequential_colls .)
    RBRACKET        reduce using rule 18 (multipleObjects -> sequential_colls .)
    RCURLYBRA       reduce using rule 18 (multipleObjects -> sequential_colls .)
    STRING          shift and go to state 46
    NUMBER          shift and go to state 47
    FLOAT           shift and go to state 48
    BOOLEAN_TRUE    shift and go to state 49
    BOOLEAN_FALSE   shift and go to state 50
    ID              shift and go to state 54
    LBRACKET        shift and go to state 55
    LPAREN          shift and go to state 56
    SETDEF          shift and go to state 57
    APOSTROPHE      shift and go to state 58

    sequential_colls               shift and go to state 45
    multipleObjects                shift and go to state 93
    value                          shift and go to state 44
    vector                         shift and go to state 51
    set                            shift and go to state 52
    list                           shift and go to state 53

state 46

    (20) value -> STRING .

    STRING          reduce using rule 20 (value -> STRING .)
    NUMBER          reduce using rule 20 (value -> STRING .)
    FLOAT           reduce using rule 20 (value -> STRING .)
    BOOLEAN_TRUE    reduce using rule 20 (value -> STRING .)
    BOOLEAN_FALSE   reduce using rule 20 (value -> STRING .)
    ID              reduce using rule 20 (value -> STRING .)
    LBRACKET        reduce using rule 20 (value -> STRING .)
    LPAREN          reduce using rule 20 (value -> STRING .)
    SETDEF          reduce using rule 20 (value -> STRING .)
    APOSTROPHE      reduce using rule 20 (value -> STRING .)
    RPAREN          reduce using rule 20 (value -> STRING .)
    RBRACKET        reduce using rule 20 (value -> STRING .)
    RCURLYBRA       reduce using rule 20 (value -> STRING .)


state 47

    (21) value -> NUMBER .

    STRING          reduce using rule 21 (value -> NUMBER .)
    NUMBER          reduce using rule 21 (value -> NUMBER .)
    FLOAT           reduce using rule 21 (value -> NUMBER .)
    BOOLEAN_TRUE    reduce using rule 21 (value -> NUMBER .)
    BOOLEAN_FALSE   reduce using rule 21 (value -> NUMBER .)
    ID              reduce using rule 21 (value -> NUMBER .)
    LBRACKET        reduce using rule 21 (value -> NUMBER .)
    LPAREN          reduce using rule 21 (value -> NUMBER .)
    SETDEF          reduce using rule 21 (value -> NUMBER .)
    APOSTROPHE      reduce using rule 21 (value -> NUMBER .)
    RPAREN          reduce using rule 21 (value -> NUMBER .)
    RBRACKET        reduce using rule 21 (value -> NUMBER .)
    RCURLYBRA       reduce using rule 21 (value -> NUMBER .)


state 48

    (22) value -> FLOAT .

    STRING          reduce using rule 22 (value -> FLOAT .)
    NUMBER          reduce using rule 22 (value -> FLOAT .)
    FLOAT           reduce using rule 22 (value -> FLOAT .)
    BOOLEAN_TRUE    reduce using rule 22 (value -> FLOAT .)
    BOOLEAN_FALSE   reduce using rule 22 (value -> FLOAT .)
    ID              reduce using rule 22 (value -> FLOAT .)
    LBRACKET        reduce using rule 22 (value -> FLOAT .)
    LPAREN          reduce using rule 22 (value -> FLOAT .)
    SETDEF          reduce using rule 22 (value -> FLOAT .)
    APOSTROPHE      reduce using rule 22 (value -> FLOAT .)
    RPAREN          reduce using rule 22 (value -> FLOAT .)
    RBRACKET        reduce using rule 22 (value -> FLOAT .)
    RCURLYBRA       reduce using rule 22 (value -> FLOAT .)


state 49

    (23) value -> BOOLEAN_TRUE .

    STRING          reduce using rule 23 (value -> BOOLEAN_TRUE .)
    NUMBER          reduce using rule 23 (value -> BOOLEAN_TRUE .)
    FLOAT           reduce using rule 23 (value -> BOOLEAN_TRUE .)
    BOOLEAN_TRUE    reduce using rule 23 (value -> BOOLEAN_TRUE .)
    BOOLEAN_FALSE   reduce using rule 23 (value -> BOOLEAN_TRUE .)
    ID              reduce using rule 23 (value -> BOOLEAN_TRUE .)
    LBRACKET        reduce using rule 23 (value -> BOOLEAN_TRUE .)
    LPAREN          reduce using rule 23 (value -> BOOLEAN_TRUE .)
    SETDEF          reduce using rule 23 (value -> BOOLEAN_TRUE .)
    APOSTROPHE      reduce using rule 23 (value -> BOOLEAN_TRUE .)
    RPAREN          reduce using rule 23 (value -> BOOLEAN_TRUE .)
    RBRACKET        reduce using rule 23 (value -> BOOLEAN_TRUE .)
    RCURLYBRA       reduce using rule 23 (value -> BOOLEAN_TRUE .)


state 50

    (24) value -> BOOLEAN_FALSE .

    STRING          reduce using rule 24 (value -> BOOLEAN_FALSE .)
    NUMBER          reduce using rule 24 (value -> BOOLEAN_FALSE .)
    FLOAT           reduce using rule 24 (value -> BOOLEAN_FALSE .)
    BOOLEAN_TRUE    reduce using rule 24 (value -> BOOLEAN_FALSE .)
    BOOLEAN_FALSE   reduce using rule 24 (value -> BOOLEAN_FALSE .)
    ID              reduce using rule 24 (value -> BOOLEAN_FALSE .)
    LBRACKET        reduce using rule 24 (value -> BOOLEAN_FALSE .)
    LPAREN          reduce using rule 24 (value -> BOOLEAN_FALSE .)
    SETDEF          reduce using rule 24 (value -> BOOLEAN_FALSE .)
    APOSTROPHE      reduce using rule 24 (value -> BOOLEAN_FALSE .)
    RPAREN          reduce using rule 24 (value -> BOOLEAN_FALSE .)
    RBRACKET        reduce using rule 24 (value -> BOOLEAN_FALSE .)
    RCURLYBRA       reduce using rule 24 (value -> BOOLEAN_FALSE .)


state 51

    (32) sequential_colls -> vector .

    STRING          reduce using rule 32 (sequential_colls -> vector .)
    NUMBER          reduce using rule 32 (sequential_colls -> vector .)
    FLOAT           reduce using rule 32 (sequential_colls -> vector .)
    BOOLEAN_TRUE    reduce using rule 32 (sequential_colls -> vector .)
    BOOLEAN_FALSE   reduce using rule 32 (sequential_colls -> vector .)
    ID              reduce using rule 32 (sequential_colls -> vector .)
    LBRACKET        reduce using rule 32 (sequential_colls -> vector .)
    LPAREN          reduce using rule 32 (sequential_colls -> vector .)
    SETDEF          reduce using rule 32 (sequential_colls -> vector .)
    APOSTROPHE      reduce using rule 32 (sequential_colls -> vector .)
    RPAREN          reduce using rule 32 (sequential_colls -> vector .)
    RBRACKET        reduce using rule 32 (sequential_colls -> vector .)
    RCURLYBRA       reduce using rule 32 (sequential_colls -> vector .)


state 52

    (33) sequential_colls -> set .

    STRING          reduce using rule 33 (sequential_colls -> set .)
    NUMBER          reduce using rule 33 (sequential_colls -> set .)
    FLOAT           reduce using rule 33 (sequential_colls -> set .)
    BOOLEAN_TRUE    reduce using rule 33 (sequential_colls -> set .)
    BOOLEAN_FALSE   reduce using rule 33 (sequential_colls -> set .)
    ID              reduce using rule 33 (sequential_colls -> set .)
    LBRACKET        reduce using rule 33 (sequential_colls -> set .)
    LPAREN          reduce using rule 33 (sequential_colls -> set .)
    SETDEF          reduce using rule 33 (sequential_colls -> set .)
    APOSTROPHE      reduce using rule 33 (sequential_colls -> set .)
    RPAREN          reduce using rule 33 (sequential_colls -> set .)
    RBRACKET        reduce using rule 33 (sequential_colls -> set .)
    RCURLYBRA       reduce using rule 33 (sequential_colls -> set .)


state 53

    (34) sequential_colls -> list .
